<resources>
    <string name="app_name">NYTimesApp</string>
    <string name="hint">Enter search query</string>
    <string name="search">Button text search</string>
    <string name="action_settings">Settings</string>
    <string name="activity_name">News Article Search</string>
    <string name="sports">Sports</string>
    <string name="fashion"><![CDATA[Fashion & Style]]></string>
    <string name="arts">Arts</string>
    <string name="older">Older</string>
    <string name="newer">Newer</string>
</resources>
