<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etDate"
        android:onClick="showDatePickerDialog"
        android:layout_gravity="center_horizontal"
        android:text="select a date"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Date"
        android:id="@+id/tvStartDate" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="News Category"
            android:id="@+id/tvCategory"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RadioButton android:id="@+id/radio_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:onClick="onRadioButtonClicked"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Preference"
            android:id="@+id/tvPreference"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RadioGroup>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_older"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/older"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_newer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newer"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply Filter"
        android:id="@+id/btnFilter"
        android:onClick="onSubmit"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02" />

</LinearLayout>